# bloch_simulator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: __init__.py  example_1qubit.py  example_2qubits.py
exports/: export_1qubit.py  export_2qubits.py
notebooks/: 1_qubit.ipynb  2_qubits.ipynb
src/: bloch_simulator_1_qbit.py  bloch_simulator_2_qbits.py
src/bloch_simulator/: __init__.py  bloch_simulator_1_qbit.py  bloch_simulator_2_qbits.py
src/bloch_simulator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
