[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bloch-simulator"
version = "0.1.0"
description = "Simulateur 1–2 qubits avec bruit (T1, T2, dépolarisation), métriques (pureté, entropie, concurrence), et visualisation Bloch."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"                         
authors = [
  { name = "Ton Nom", email = "ton.email@example.com" }
]
keywords = ["quantum", "bloch", "qiskit", "kraus", "t1", "t2", "depolarization"]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "qiskit>=1.0"
]


[project.urls]
Homepage = "https://github.com/lettynail/bloch_simulator"
Issues = "https://github.com/lettynail/bloch_simulator/issues"


[project.scripts]
bloch-sim = "bloch_simulator.cli:main"   


[tool.setuptools.packages.find]
where = ["src"]                           
include = ["bloch_simulator*"]


[tool.setuptools.package-data]
bloch_simulator = ["py.typed"]


project.license-files = ["LICENSE", "LICENSE.md"]
